load("@rules_erlang//:escript.bzl", "escript_archive")

load("@rules_elixir//:defs.bzl", "elixir_app", "ex_unit_test", "mix_library", "mix_test")

# Production library
mix_library(
    name = "lib",
    # TODO: we should generate this target, and elicit this name from the mix
    # configuration
    app_name = "plug_sample",
    mix_config = ":mix.exs",
    srcs = glob(['lib/**/*.ex']),
    deps = [
        "@plug_crypto//:plug_crypto"
    ],
)

# Test library (compiled with MIX_ENV=test)
mix_library(
    name = "lib_test",
    app_name = "plug_sample",
    mix_env = "test",
    mix_config = ":mix.exs",
    srcs = glob(['lib/**/*.ex']),
    deps = [
        "@plug_crypto//:plug_crypto"
    ],
)

# TODO: Migrate to elixir_release + elixir_release_bundle
# The new approach uses:
#   1. elixir_release to create the release with Elixir-specific processing
#   2. elixir_release_bundle to create a deployable bundle
# Example:
#   load("//private:elixir_release.bzl", "elixir_release")
#   load("//private:elixir_release_bundle.bzl", "elixir_release_bundle")
#
#   elixir_release(
#       name = "release",
#       app = ":lib",
#       release_version = "1.0.0",
#   )
#
#   elixir_release_bundle(
#       name = "bin",
#       release = ":release",
#       command_line_args = ["--no-halt"],
#   )
#
# mix_release(
#     name = "bin",
#     application = ":lib",
#     command_line_args = ["--no-halt"],
# )

# Test runner using pre-compiled artifacts
mix_test(
    name = "plug_sample_test",
    lib = ":lib_test",
    srcs = glob(['test/**/*.exs']), # This is optional
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
)

# TODO: this is what we want mix_binary to look like, when mix_release has
# been built separately (for whatever reason)
# mix_binary(
#     name = "basic-bin",
#     release = ":basic-release",
# )

# Otherwise, we should still be able to construct this without _explicitly_
# defining a mix_release. maybe this just becomes a macro?
# mix_binary(
#     name = "basic-bin",
#     application = ":basic",
# )

# elixir_app(
#     app_name = "basic",
#     srcs = [
#         "mix.exs",
#     ] + glob(["lib/**/*.ex"]),
# )
# 
# escript_archive(
#     name = "basic",
#     app = ":erlang_app",
#     headers = [
#         "shebang",
#         '{emu_args, "-escript main Elixir.Basic -hidden"}',
#     ],
# )
# 
# ex_unit_test(
#     name = "assertion_test",
#     srcs = [
#         "test/assertion_test.exs",
#     ],
#     env = {
#         "ERL_COMPILER_OPTIONS": "deterministic",
#         "ELIXIR_ERL_OPTIONS": "+fnu",
#     },
# )
# 
# ex_unit_test(
#     name = "helped_test",
#     srcs = [
#         "test/test_helper.exs",
#         "test/helped_test.exs",
#     ],
#     env = {
#         "ERL_COMPILER_OPTIONS": "deterministic",
#         "ELIXIR_ERL_OPTIONS": "+fnu",
#     },
# )
