# NOTE: this rule specifically *does not* use mix, allowing us to use it to
# bootstrap rules_mix
load("@rules_elixir//:elixir_app.bzl", "elixir_app")
load("@rules_erlang//:escript.bzl", "escript_archive")

package(default_visibility = [ "//visibility:public"])

elixir_app(
    srcs = [
        "lib/dependency_analyser.ex",
    ],
    app_name = "convert_lockfile",
    deps = [
        "@rules_elixir//elixir:hex",
        "@rules_elixir//elixir:logger",
        "@rules_elixir//elixir:mix",
        "@rules_elixir//elixir:eex",
        "@jason//:erlang_app",
    ],
)

escript_archive(
    name = "dependency_analyser",
    # NOTE: this is hard-coded in upstream rules_elixir.
    # Namespacing is kept sane through directory structure.
    app = ":erlang_app",
    headers = [
        "shebang",
        '{emu_args, "-escript main Elixir.DependencyAnalyser -hidden"}',
    ],
)
