# Build configuration for sys_config_builder tool
# This tool generates Erlang sys.config files with Elixir Config.Provider support

load("@rules_elixir//:elixir_app.bzl", "elixir_app")
load("@rules_erlang//:escript.bzl", "escript_archive")

package(default_visibility = ["//visibility:public"])

# Build the Elixir application
elixir_app(
    srcs = [
        "lib/sys_config_builder.ex",
    ],
    app_name = "sys_config_builder",
    deps = [
        "@rules_elixir//elixir:elixir",
        # We need Config.Reader and Config.Provider modules
    ],
)

# Create the escript executable
escript_archive(
    name = "sys_config_builder",
    app = ":erlang_app",
    headers = [
        "shebang",
        # emu_args that reference the module name
        '{emu_args, "-escript main Elixir.SysConfigBuilder -hidden"}',
    ],
)